# goblinZZ

./: CMakeLists.txt  README.md
include/: AliasContext.h  AliasInstvistor.h  AnalyzerBase.h  Context.h  GlobalVistor.h  TaintObject.h  utils.h
src/: AliasContext.cpp  AliasInstvistor.cpp  GlobalVisitor.cpp  entry.cpp  utils.cpp
